--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,8 @@ Type: Package
 Title: Fast estimators for social scientists
 Version: 1.0
 Date: 2017-03-26
-Authors@R: c(person("Graeme", "Blair", email = "graeme.blair@ucla.edu", role = c("aut", "cre")),
-             person("Jasper", "Cooper", email = "jjc2247@columbia.edu", role = c("aut")),
-             person("Alexander", "Coppock", email = "alex.coppock@yale.edu", role = c("aut")),
-             person("Macartan", "Humphreys", email = "macartan@gmail.com", role = c("aut")),
-             person("Luke", "Sonnet", email = "luke.sonnet@gmail.com", role = c("ctb")))
+Authors: Redacted for review
 Description: This package provides fast estimators for common models in social science research.
-URL: http://estimatr.declaredesign.org, https://github.com/DeclareDesign/estimatr
 BugReports: https://github.com/DeclareDesign/estimatr/issues
 License: MIT + file LICENSE
 Imports: Rcpp (>= 0.12.10)
